# rsomics-epps-singleton

./: Cargo.toml  README.md
benches/: epps.rs
src/: chi2.rs  cli.rs  es.rs  jacobi.rs  lib.rs  pairwise.rs  parse.rs
tests/: compat.rs
tests/golden/: a_x.tsv  a_y.tsv  b_x.tsv  b_y.tsv  c_x.tsv  c_y.tsv  d_x.tsv  d_y.tsv  e_x.tsv  e_y.tsv  expected.tsv  f_x.tsv  f_y.tsv  g_x.tsv  g_y.tsv  h_x.tsv  h_y.tsv
